project/manifest/finder_consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finderconsumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finderconsumer-app
  template:
    metadata:
      labels:
        app: finderconsumer-app
    spec:
      containers:
      - name: finderconsumer
        image: dkuser2/otus-project:v1
        workingDir: /app
        command: ["make"]
        args: ["finder_consumer"]
        ports:
        - name: web
          containerPort: 8000
