project/manifest/notification_consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationsconsumer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications_consumer-app
  template:
    metadata:
      labels:
        app: notifications_consumer-app
    spec:
      containers:
      - name: notificationsconsumer
        image: dkuser2/otus-project:v1
        workingDir: /app
        command: ["make"]
        args: ["notifications_consumer"]
        ports:
        - name: web
          containerPort: 8000
