project/manifest/monitoring-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
    prometheus: prom-prometheus
  name: prometheus-grafana-nodeport
spec:
  ports:
    - name: service
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: prom
    app.kubernetes.io/name: grafana
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    prometheus: prom-prometheus
  name: prom-prometheus-nodeport
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
  type: NodePort
