project/manifest/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - name: redis
        image: redis:6.2
        ports:
        - name: web
          containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis-app
spec:
  selector:
    app: redis-app
  ports:
    - protocol: TCP
      port: 6379
      name: web
      targetPort: web
  type: NodePort
