project/manifest/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkaui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafkaui-app
  template:
    metadata:
      labels:
        app: kafkaui-app
    spec:
      containers:
      - name: kafkaui
        imagePullPolicy: IfNotPresent
        image: provectuslabs/kafka-ui:latest
        ports:
        - name: web
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafkaui
  labels:
    app: kafkaui-app
spec:
  selector:
    app: kafkaui-app
  ports:
    - protocol: TCP
      port: 8080
      name: web
      targetPort: web
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafkaui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /kafkaui(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: kafkaui
            port:
              number: 8080
