project/manifest/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-app
  template:
    metadata:
      labels:
        app: notifications-app
    spec:
      containers:
      - name: notifications
        image: dkuser2/otus-project:v1
        workingDir: /app
        command: ["make"]
        args: ["notifications"]
        ports:
        - name: web
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notifications
  labels:
    app: notifications-app
spec:
  selector:
    app: notifications-app
  ports:
    - protocol: TCP
      port: 8000
      name: web
      targetPort: web
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notifications-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /notifications(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: notifications
            port:
              number: 8000
