project/manifest/saga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saga-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saga-app
  template:
    metadata:
      labels:
        app: saga-app
    spec:
      containers:
      - name: saga
        image: dkuser2/otus-saga-28:v1
        workingDir: /app/saga
        command: ["python"]
        args: ["manage.py", "runserver", "0:8000"]
        ports:
        - name: web
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: saga-service
  labels:
    app: saga-app
spec:
  selector:
    app: saga-app
  ports:
    - protocol: TCP
      port: 9000
      name: web
      targetPort: web
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saga-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: saga-service
            port:
              number: 9000
