project/manifest/store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-app
  template:
    metadata:
      labels:
        app: store-app
    spec:
      containers:
      - name: store
        image: dkuser2/otus-project:v1
        workingDir: /app
        command: ["make"]
        args: ["store"]
        ports:
        - name: web
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: store
  labels:
    app: store-app
spec:
  selector:
    app: store-app
  ports:
    - protocol: TCP
      port: 8000
      name: web
      targetPort: web
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /store(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: store
            port:
              number: 8000
